--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "next": "13.4.13",
     "next-auth": "^4.23.1",
     "next-themes": "^0.2.1",
+    "nextjs-toploader": "^1.4.2",
     "pg": "^8.11.3",
     "postcss": "8.4.27",
     "postgres": "^3.3.5",
